# My_fastapi_project

./: .dockerignore  .env.db  .env.yc  .env_db  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  main.py  promtail-config.yaml  pyproject.toml  requirements.txt  setup.py
docker/: Dockerfile
src/: __init__.py  alembic.ini  config.py  database.py  deps.py  download.py  logger.py  main.py  models.py  orm.py  repository.py  router.py  schemas.py
src/alembic/: env.py
src/alembic/versions/: e9b7db34ec77_delete_type_workload.py
src/api/: __init__.py  end_client.py  end_jeweler.py
src/api/clients/: crud_cli.py  deps_client.py
src/api/jewelers/: crud_jew.py  jew_schemas.py
src/api/orders/: crud_ord.py  end_order.py  ord_schemas.py
src/api_v1/: __init__.py  end_client.py  end_jeweler.py
src/api_v1/clients/: __init__.py  cli_schemas.py  crud_cli.py  deps_client.py  end_client.py
src/api_v1/jewelers/: ## GitHub Copilot Chat.md  __init__.py  crud_jew.py  deps_jeweler.py  end_jeweler.py  jew_schemas.py
src/api_v1/orders/: __init__.py  crud_ord.py  end_order.py  ord_schemas.py
src/auth/: README.md  utils.py
src/bot/: handlers.py  main.py
src/bot/middlewares/: db_session.py
src/clients/: cli_schemas.py  crud_cli.py  end_client.py
src/demo_auth/: __init__.py  demo_jwt_auth.py
src/jewelers/: crud_jew.py  end_jeweler.py  jew_schemas.py
src/migrations/: env.py
src/migrations/versions/: 056ca0c7052e_.py  210c812aff5f_.py  4c386ff0df46_current_state.py  553d253d36da_.py  60519016b922_create_initial_tables.py  6cfcd6fcb054_.py  716bf267f844_revert_problematic_changes.py  8eb040eba589_.py  9304a61d7a98_.py  a8ae2a41d519_change_db.py  ba670e5f3791_.py  bedc7ce4d46a_increase_client_avatar_url_length.py  d9736a25c64c_.py  e2edcd3b6307_.py  e9b7db34ec77_delete_type_workload.py
src/models/: __init__.py  base.py  db_helper.py  models.py
src/orders/: end_order.py  ord_schemas.py
src/queries/: __init__.py  orm.py
