[project]
name = "my-fastapi-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.12",
    "geoalchemy2>=0.17.1",
    "pydantic[email]>=2.11.2",
    "pydantic-settings>=2.8.1",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.40",
    "sqlalchemy-orm>=1.2.10",
    "uvicorn>=0.34.0",
    "alembic>=1.15.2",
    "greenlet>=3.1.1",
    "black>=25.1.0",
    "authx>=1.4.2",
    "boto3>=1.37.34",
    "python-multipart>=0.0.20",
    "dotenv>=0.9.9",
    "email-validator>=2.2.0",
    "pyjwt[crypto]>=2.10.1",
]


