[project]
name = "my-fastapi-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.12",
    "geoalchemy2>=0.17.1",
    "pydantic[email]==2.9.2",
    "pydantic-settings>=2.8.1",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.40",
    "sqlalchemy-orm>=1.2.10",
    "uvicorn>=0.34.0",
    "alembic>=1.15.2",
    "greenlet>=3.1.1",
    "black>=25.1.0",
    "authx>=1.4.2",
    "boto3>=1.37.34",
    "python-multipart>=0.0.20",
    "dotenv>=0.9.9",
    "email-validator>=2.2.0",
    "pyjwt[crypto]>=2.10.1",
    "cryptography>=44.0.2",
    "cffi>=1.17.1",
    "pycparser>=2.22",
    "bcrypt>=4.3.0",
    "pathlib>=1.0.1",
    "aiogram==3.13.1",
    "aiofiles==23.2.1",
    "aiohttp==3.10.1",
    "aiosignal==1.3.1",
    "annotated-types==0.6.0",
    "async-timeout>=4.0.3,<5.0.0" ,
    "attrs==23.1.0",
    "certifi==2023.7.22",
    "charset-normalizer==3.3.0",
    "frozenlist==1.4.0",
    "idna==3.4",
    "magic-filter==1.0.12",
    "multidict>=6.0.4,<7.0.0",
    "typing_extensions>=4.7.1",
    "yarl==1.9.2",
]


